--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <header>
       <div class="div-header">
-      <img id="small-picture" src="/Users/tannernix/Downloads/IMG-6093.PNG" alt="picture of Tanner Nix" height="80px" width="50px">
+      <img id="small-picture" src="./assets/images/IMG-6093.PNG" alt="picture of Tanner Nix" height="80px" width="50px">
        <h1 id="h1-header">Nix</h1>
       </div>
        <section>
@@ -44,10 +44,10 @@
             <div>
               <ul class="list-images">
                 <li id="bg-image"><a href="https://www.google.com/"><img src="./assets/images/Screenshot 2023-04-27 at 5.34.30 PM.png" alt="google image"></a></li>
-                <li class="small-image1"><a href="https://www.bing.com/"><img src="/Users/tannernix/Downloads/bootcamp/bootcamp-challenges/bootcamp-challenge-2/assets/images/Screenshot 2023-04-27 at 5.39.45 PM.png" alt="bing"></a></li>
-                <li class="small-image2"><a href="https://www.amazon.com/ref=ap_frn_logo"><img src="/Users/tannernix/Downloads/bootcamp/bootcamp-challenges/bootcamp-challenge-2/assets/images/Screenshot 2023-04-27 at 5.44.18 PM.png" alt="amazon image"></a></li>
-                <li class="small-image3"><a href="https://www.microsoft.com/en-us/download/internet-explorer.aspx"><img src="/Users/tannernix/Downloads/bootcamp/bootcamp-challenges/bootcamp-challenge-2/assets/images/Screenshot 2023-04-27 at 5.47.22 PM.png" alt="microsoft image"></a></li>
-                <li class="small-image4"><a href="https://www.apple.com/"><img src="/Users/tannernix/Downloads/bootcamp/bootcamp-challenges/bootcamp-challenge-2/assets/images/Screenshot 2023-04-27 at 5.51.42 PM.png" alt="apple image"></a></li>
+                <li class="small-image1"><a href="https://www.bing.com/"><img src="./assets/images/Screenshot 2023-04-27 at 5.39.45 PM.png" alt="bing"></a></li>
+                <li class="small-image2"><a href="https://www.amazon.com/ref=ap_frn_logo"><img src="./assets/images/Screenshot 2023-04-27 at 5.44.18 PM.png" alt="amazon image"></a></li>
+                <li class="small-image3"><a href="https://www.microsoft.com/en-us/download/internet-explorer.aspx"><img src="./assets/images/Screenshot 2023-04-27 at 5.47.22 PM.png" alt="microsoft image"></a></li>
+                <li class="small-image4"><a href="https://www.apple.com/"><img src="./assets/images/Screenshot 2023-04-27 at 5.51.42 PM.png" alt="apple image"></a></li>
               </ul>
             </div>
         </section>
